--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -9,8 +9,6 @@
         </div>
       <% end %>
     </div>
-    <div class="mt-2 text-center text-sm font-semibold text-gray-800 truncate w-full">
-      <%= book.title %>
-    </div>
+    <!-- Removed duplicate title here -->
   <% end %>
 </div>
