--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -1,5 +1,11 @@
-<% content_for :title, "New movie" %>
+<% content_for :title, "New Movie" %>
 
-<h1 class="font-bold text-4xl mbe-4">New movie</h1>
+<div class="max-w-2xl mx-auto p-8 bg-[#1a1a1a] text-white shadow-lg rounded-lg mt-8">
+  <h1 class="text-3xl font-bold mb-6 text-center border-b border-gray-700 pb-2">New Movie</h1>
 
-<%= render "form", movie: @movie %>
+  <%= render "form", movie: @movie %>
+
+  <div class="mt-6 text-center">
+    <%= link_to "Back to Movies", movies_path, class: "btn btn--secondary" %>
+  </div>
+</div>
