--- a/app/views/musics/edit.html.erb
+++ b/app/views/musics/edit.html.erb
@@ -1,22 +1,24 @@
-<% content_for :title, "Editing music" %>
+<% content_for :title, "Editing Music" %>
 
-<h1 class="font-bold text-4xl mbe-4">Editing music</h1>
+<div class="max-w-2xl mx-auto p-8 bg-[#1a1a1a] text-white shadow-lg rounded-lg mt-8">
+  <h1 class="text-3xl font-bold mb-6 text-center border-b border-gray-700 pb-2">Edit Music</h1>
 
-<%= render "form", model: @music %>
+  <%= render "form", music: @music %>
 
-<div class="inline-flex flex-wrap items-center gap mbs-2" style="--row-gap: .5rem">
-  <%= link_to "Back to musics", musics_path, class: "btn" %>
-</div>
-
-<%= form_with(model: @music, local: true) do |form| %>
   <% if @music.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@music.errors.count, "error") %> prohibited this music from being saved:</h2>
-      <ul>
+    <div class="mt-6 p-4 bg-red-900 text-red-200 border border-red-600 rounded">
+      <h2 class="font-semibold mb-2">
+        <%= pluralize(@music.errors.count, "error") %> prohibited this song from being saved:
+      </h2>
+      <ul class="list-disc list-inside text-sm ml-4">
         <% @music.errors.full_messages.each do |message| %>
           <li><%= message %></li>
         <% end %>
       </ul>
     </div>
   <% end %>
-<% end %>
+
+  <div class="flex flex-wrap justify-center gap-4 mt-6">
+    <%= link_to "Back to Music", musics_path, class: "btn btn--secondary" %>
+  </div>
+</div>
