--- a/app/views/musics/new.html.erb
+++ b/app/views/musics/new.html.erb
@@ -1,6 +1,7 @@
 <% content_for :title, "New Song" %>
 
-<h1 class="font-bold text-4xl mbe-4">New Music</h1>
+<div class="max-w-2xl mx-auto p-8 bg-[#1a1a1a] text-white shadow-lg rounded-lg mt-8">
+  <h1 class="text-3xl font-bold mb-6 text-center border-b border-gray-700 pb-2">Add a New Song</h1>
 
 <div id="spotify-search-container" class="mb-4 hidden">
   <input type="text" id="spotify-query" placeholder="Enter song name" class="border px-2 py-1 rounded w-1/2">
