--- a/app/views/musics/_form.html.erb
+++ b/app/views/musics/_form.html.erb
@@ -47,9 +47,8 @@
   </div>
 
   <div class="flex flex-col items-start gap-half mbe-4">
-    <%= form.label :poster, "Poster", class: "font-semibold text-sm text-gray-700" %>
-    <%= form.file_field :poster, direct_upload: true, class: "mt-1" %>
-    <div id="spotify-image-container" class="w-48 h-72 mt-2">
+    <%= form.hidden_field :image_url, id: "music_image_url" %>
+    <div id="spotify-image-container">
     </div>
   </div>
 
