--- a/app/views/musics/_music.html.erb
+++ b/app/views/musics/_music.html.erb
@@ -2,7 +2,7 @@
 
   <% if music.image_url.present? %>
     <div class="flex justify-center">
-      <%= image_tag music.image_url, class: "music-image", style: "width: 150px; height: 150px;" %>
+      <%= image_tag music.image_url, class: "music-image", style: "width: 200px; height: 200px;" %>
     </div>
   <% end %>
 
@@ -48,5 +48,10 @@
     <p class="leading-none"><%= music.rating %></p>
     </div>
   <% end %>
+
+  <div class="flex gap-2 mt-4">
+    <%= link_to "Edit", edit_music_path(music), class: "btn btn--primary" %>
+    <%= link_to "Delete", music_path(music), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn--danger" %>
+  </div>    
 
 </div>
